# DoxD

./: .gitignore  .gitmodules  DoxD.Game.cryproject  LICENSE  README.md  doxd.game.cryproject.backup
Assets/: eye_diff.dds.cryasset
Assets/Animations/: CompressionPresets.json  DBATable.json  player.animevents
Assets/Animations/editor/: reference_preview_0.caf
Assets/Audio/Music/: ZA-4.wav.cryasset
Assets/Levels/: 01_bar.level.cryasset  example.level.cryasset  lv_sandbox.level.cryasset
Assets/Levels/01_bar/: 01_bar.level  filelist.xml  tags.json  tags.txt
Assets/Levels/example/: example.level  example.level.bak  screenshotmap.settings
Assets/Levels/lv_sandbox/: filelist.xml  lv_sandbox.level  lv_sandbox.level.bak  lv_sandbox.level.bak2
Assets/Libs/config/: defaultprofile.xml
Assets/Libs/environmentpresets/: env_sandbox.env  env_sandbox.env.cryasset  example.env.cryasset
Assets/Materials/: donering.mtl  donering.mtl.cryasset  goldring.mtl  goldring.mtl.cryasset  m_checker.mtl  m_checker.mtl.cryasset  material_default.mtl.cryasset  material_layers_default.mtl.cryasset  material_terrain_default.mtl.cryasset  terrainbrown.mtl  terrainbrown.mtl.cryasset  terraindesigner.mtl  terraindesigner.mtl.cryasset
Assets/Materials/clouds/: distanceclouds.mtl.cryasset  (+3 more)
Assets/prefabs/: barlamphanging.prefab  barlamphanging.prefab.cryasset  barspeaker.prefab  barspeaker.prefab.cryasset  barstool.prefab  barstool.prefab.cryasset  cyber_marica.prefab  cyber_marica.prefab.cryasset  pavement_01.prefab  pavement_01.prefab.cryasset  pf_bartable.prefab  pf_bartable.prefab.cryasset  pf_bartableset.prefab  pf_bartableset.prefab.cryasset  pillar_brutalist_01.prefab  pillar_brutalist_01.prefab.cryasset  policecar_01.prefab  policecar_01.prefab.cryasset  railway_bridge.prefab  railway_bridge.prefab.cryasset  sink_01.prefab  sink_01.prefab.cryasset  toilet_lowdispenser.prefab  toilet_lowdispenser.prefab.cryasset
Code/: CMakeLists.txt  GameCVars.cpp  GameCVars.h  GamePlugin.cpp  StdAfx.h
Code/Components/Actor/: Actor.cpp  Actor.h
Code/Components/Camera/: CameraModes.cpp  PlayerCamera.cpp  PlayerCamera.h
Code/Components/Ladder/: LadderComponent.cpp
Code/Components/Player/: Player.cpp  Player.h
Code/Utility/: CryWatch.h  EnumUtils.cpp
src/: CMakeLists.txt  GamePlugin.cpp  GamePlugin.h  StdAfx.h
src/Actor/: ActorDefinitions.h
src/Actor/Animation/: ActorAnimation.cpp  ActorAnimation.h  ActorAnimationEvents.h
src/Actor/Animation/Actions/: ActorAnimationActionLocomotion.cpp  ActorAnimationActionLocomotion.h  ActorAnimationActionLookPose.cpp  ActorAnimationActionLookPose.h
src/Actor/StateMachine/: ActorStateEntry.cpp  ActorStateEvents.h  ActorStateUtility.cpp  ActorStateUtility.h
src/Actor/StateMachine/States/Movement/: ActorStateDead.cpp  ActorStateDead.h  ActorStateFly.cpp  ActorStateFly.h  ActorStateGround.cpp  ActorStateGround.h  ActorStateJump.cpp  ActorStateJump.h  ActorStateLadder.cpp  ActorStateLadder.h  ActorStateMovement.cpp
src/Animation/: Animation.h
src/Animation/ProceduralContext/: ProceduralContextLook.cpp  ProceduralContextLook.h
src/Components/: SpawnPoint.cpp
src/Components/Actor/: ActorComponent.cpp  ActorComponent.h  ActorControllerComponent.cpp  ActorControllerComponent.h
src/Components/Animation/: ActorAnimationComponent.cpp  ActorAnimationComponent.h
src/Components/Interaction/: DRSInteractionComponent.cpp  DRSInteractionComponent.h  EntityAwarenessComponent.cpp  EntityAwarenessComponent.h  EntityInteractionComponent.cpp  EntityInteractionComponent.h
src/Components/Ladder/: LadderComponent.h
src/Components/Player/: PlayerComponent.cpp  PlayerComponent.h
src/Components/Player/Camera/: CameraManagerComponent.cpp  CameraManagerComponent.h  ICameraComponent.cpp  TPCameraComponent.cpp
src/Components/Player/Input/: PlayerInputComponent.cpp  PlayerInputComponent.h
src/Components/Snaplocks/: SnaplockComponent.cpp
src/Console/: GameCVars.cpp  GameCVars.h
src/Contracts/: IActor.h  IEntityInteraction.h  IItem.h
src/DoxDCore/: CMakeLists.txt  GamePlugin.cpp  GamePlugin.h  StdAfx.h
src/DoxDCore/Actor/: Fate.h
src/DoxDCore/Actor/Animation/: ActorAnimation.h  ActorAnimationEvents.cpp
src/DoxDCore/Actor/Movement/: ActorStateEvents.h
src/DoxDCore/Attachments/: Attachment.cpp  Attachment.h
src/DoxDCore/Components/Actor/: Actor.h  ActorComponent.cpp  ActorComponent.h  ActorControllerComponent.cpp  ActorControllerComponent.h  ActorDefinitions.h
src/DoxDCore/Components/Animation/: ActorAnimationComponent.cpp  ActorAnimationComponent.h
src/DoxDCore/Components/Attachments/: AttachmentComponent.cpp  AttachmentComponent.h
src/DoxDCore/Components/Camera/: CameraModes.cpp  CameraModes.h  ICameraMode.cpp  ICameraMode.h  PlayerCamera.cpp  PlayerCamera.h
src/DoxDCore/Components/Ladder/: LadderComponent.h
src/DoxDCore/Components/Player/: Player.cpp  Player.h  PlayerComponent.cpp  PlayerComponent.h
src/DoxDCore/Components/Player/Camera/: CameraManagerComponent.cpp  CameraModes.cpp  CameraModes.h  ICameraComponent.h  ICameraMode.cpp  ICameraMode.h  PlayerCamera.cpp  PlayerCamera.h  TPCameraComponent.cpp  TPCameraComponent.h
src/DoxDCore/Components/Player/Input/: PlayerInputComponent.cpp  PlayerInputComponent.h
src/DoxDCore/Components/Snaplocks/: SnaplockComponent.h
src/DoxDCore/Console/: GameCVars.cpp  GameCVars.h
src/DoxDCore/Contracts/: IActor.h  IItem.h
src/DoxDCore/DynamicResponseSystem/: ConditionDistanceToEntity.cpp  ConditionDistanceToEntity.h
src/DoxDCore/Entities/: EntityEffects.cpp  EntityEffects.h
src/DoxDCore/Snaplocks/: Snaplock.cpp  Snaplock.h
src/DoxDCore/Utility/: AutoEnum.h  CryHash.cpp  CryWatch.cpp  CryWatch.h  EnumUtils.h  GameUtils.h  StateMachine.h  StringUtils.cpp  StringUtils.h
src/DynamicResponseSystem/: ConditionDistanceToEntity.h
src/Entities/: EntityEffects.cpp  EntityEffects.h
src/Snaplocks/: Snaplock.cpp
src/Utility/: AutoEnum.cpp  CryHash.cpp  CryHash.h  CryWatch.cpp  CryWatch.h  LocalizationUtility.cpp  LocalizationUtility.h  StateMachine.h  StringUtils.cpp  StringUtils.h
(+2341 files in other folders)
